--- a/WebApiCoreResources/appsettings.Development.json
+++ b/WebApiCoreResources/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-3K47SR3;Database=WebAPICoreResources;Trusted_Connection=True;MultipleActiveResultSets=true"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Debug",
